--- a/styles/globals.css
+++ b/styles/globals.css
@@ -432,3 +432,17 @@ button.primary,
     margin-bottom: 10px;
     text-decoration: none;
 }
+
+/* Nav */
+nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 200px;
+    margin: 50px auto;
+    min-height: 100px;
+
+    border: 1px solid var(--custom-color-brand);
+}
